0.11.0 - 29/12/2020 (Happy 2 year birthday LXDMosaic)

Added
    Cron job to disable backup schedules for offline hosts & deleted instances
    Limit not-admin users to servers/projects
    View to view & delete hosts in settings
    Show instance limits on instance view (#288)
    Get & set comments in the user.comment key for an instance (#283)
    Show project consumption on project overview
    Filter by name & instance type in sidebar on hosts with more than 5 instances
    Show OS icon in sidebar (#296)
    Button to start an instance on creation (#294)
    LDAP user syncing & login (#171, #272, #300)
    Show users who can access a project on project view
    View storage volumes
    Attach volumes to instances
    View VGA console for virtual machines (#238)

Changed
    Support backups & backup schedules in different projects
    Disable backup schedules when deleting instance
    Use buttons for bulk instance actions instead of dropdown
    Dont show carat when host is offline
    Replace nav button text with icons
    Go back to default font
    Split project restrictions into their own table on frontend
    Remove all usage of cdns (so the it should work offline) (#293)
    Allow setting admin password on first run (#299)
    Show operation download progress if available (#316)
    Removed socket.io dependency as it was conflicting with expressws
    Support opening console's in other projects

Fixed
    Switching projects in snap broken
    An issue with bulk deleting running instances
    Reseting user password by pressing enter leads to undefined behaviour (#282)
    Console session doubling input (#301)
    Remove card-columns from images which prevents a jumpy UI
    Attempts to gather offline hosts metrics breaks script

0.10.2 - 30/10/2020

Fixed
    Cant access instance files (#273)

0.10.1 - 21/10/2020

Fixed
    Fix an issue with node trying to use wrong sql methods (#269)

0.10.0 - 20/10/2020

Added