@@ -1,3 +1,8 @@
+Unreleased
+
+Changed
+    Image shown as part of instance details instead of title
+
 0.11.0 - 29/12/2020 (Happy 2 year birthday LXDMosaic)
 
 Added
